<resources>
    <string name="app_name">Movie Compfest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_account">Register Account</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="i_already_have_account_login">I already have account, Login</string>
    <string name="login_account">Login Account</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account_register">I don\'t have an account, Register</string>
    <string name="your_balance">Your Balance</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_ticket">Order Ticket</string>
    <string name="lorsum">Lorem ipsum dolor sit amet consequer en this description repeat 4x</string>
    <string name="input_amount">Input Amount</string>
    <string name="total_payment">Total Payment</string>
    <string name="current_balance">Current Balance</string>
    <string name="input_amount_to_pay">Input amount to pay</string>
    <string name="withdraw">Withdraw</string>
    <string name="enable_your_internet_connection">Enable your internet connection</string>
    <string name="payment_success_back_to_home">Payment success, back to home</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="input_seat_number">Input seat number</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
</resources>