<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_layout"
    android:padding="16dp"
    tools:context=".auth.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/product_sans_bold"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/textfield_shape"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:fontFamily="@font/product_sans_regular"
        android:layout_marginTop="24dp"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/textfield_shape"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:fontFamily="@font/product_sans_regular"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:background="@drawable/textfield_shape"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:fontFamily="@font/product_sans_regular"
        android:layout_marginTop="24dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:fontFamily="@font/product_sans_regular"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="16dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>